<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/change_direction"
        android:icon="@drawable/swap"
        android:contentDescription="ChangesTheDirection"
        android:orderInCategory="0"
        app:showAsAction="always"
        android:title=""/>
    <item
        android:id="@+id/speed_decrease"
        android:contentDescription="@string/speed_decrease"
        android:icon="@drawable/speed_slow_decrease"
        android:orderInCategory="10"
        app:showAsAction="always"
        android:title="" />
    <item
        android:id="@+id/speed_increase"
        android:icon="@drawable/speed_up_increase"
        android:contentDescription="@string/speed_increase"
        android:orderInCategory="20"
        app:showAsAction="always"
        android:title="" />
    <item
        android:id="@+id/zoom_out"
        android:icon="@drawable/zoom_o"
        android:contentDescription="@string/zoom_out"
        android:orderInCategory="30"
        app:showAsAction="always"
        android:title=""/>
    <item
        android:id="@+id/zoom_in"
        android:icon="@drawable/zoom_i"
        android:contentDescription="@string/zoom_in"
        android:orderInCategory="40"
        app:showAsAction="always"
        android:title=""/>

    <item
        android:id="@+id/toggle_labels"
        android:orderInCategory="50"
        android:contentDescription="@string/toggle_labels"
        app:showAsAction="never"
        android:title="Toggle Labels"/>
    <item
        android:id="@+id/timeJump"
        android:orderInCategory="60"
        android:contentDescription="@string/time_jump"
        app:showAsAction="never"
        android:title="Time Jump"/>

    <item
        android:id="@+id/action_settings"
        android:contentDescription="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="Settings"/>

</menu>